<resources>

    <string name="app_name">我的闪信 </string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">我的闪信</string>
    <string name="dyc_username">用户名：</string>
    <string name="dyc_passwd">密 码：</string>
    <string name="dyc_rember">记住密码</string>
    <string name="dyc_login">登录</string>
    <string name="dyc_reg">注册</string>
    <string name="dyc_repasswd">密码确认</string>
    <string name="dyc_sex">性 别</string>
    <string name="dyc_sexm">男</string>
    <string name="dyc_sexw">女</string>
    <string name="dyc_hobby">爱好</string>
    <string name="dyc_travel">旅游</string>
    <string name="dyc_sport">体育</string>
    <string name="dyc_music">音乐</string>
    <string name="dyc_home">居住地</string>
    <string name="dyc_back">返回</string>
    <string name="send_img_file_not_exist">文件不存在</string>
    <string name="action_settings">关于我们</string>
</resources>