<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ec"
    >
    
    <RelativeLayout 
        android:id="@+id/login_top_layout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bar">
        <Button
            android:id="@+id/login_reback_btn"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/dyc_back"
            android:textSize="14sp"
            android:textColor="#fff"
            android:onClick="login_back"
            android:background="@drawable/title_btn_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/dyc_login"
           />
        
    </RelativeLayout>

	<EditText 
	    android:id="@+id/dyc_username"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/login_top_layout"
	    android:textColor="#000"
	    android:textSize="15sp"
	    android:layout_marginTop="25dp"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:singleLine="true"
	    android:background="@drawable/login_editbox"
	    android:hint="请输入闪信号"/>
	<EditText 
	    android:id="@+id/dyc_passwd"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/dyc_username"
	    android:textColor="#000"
	    android:textSize="15sp"
	    android:layout_marginTop="25dp"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:background="@drawable/login_editbox"
	    android:password="true"
	    android:singleLine="true"
	    android:hint="请输入密码"/>
	
	
	<CheckBox
        android:id="@+id/dyc_rember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textColor="#000"
        android:text="@string/dyc_rember" />
	
	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:layout_below="@+id/dyc_rember"
	    >
	    <Button
	        android:id="@+id/forget_passwd" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="23dp"
	        android:layout_marginTop="5dp"
	        android:text="忘记密码?"
	        android:textSize="16sp"
	        android:textColor="#00f"
	        android:background="#0000"
	        android:onClick="login_pw"
	        />
	     <Button
	        android:id="@+id/login"
	        android:layout_width="90dp"
	        android:layout_height="40dp"
	        android:layout_marginRight="20dp"
	        android:layout_alignParentRight="true"
	        android:text="@string/dyc_login"
	        android:background="@drawable/btn_style_green"
	        android:textColor="#ffffff"
	        android:textSize="18sp"
	        />
	</RelativeLayout>
</RelativeLayout>